--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "soundmanager2": "^2.97.20170602"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0-0"
+    "react": "^15.3.0 || ^16.0.0-0 || ^17.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
