--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-sound",
-  "version": "1.2.0",
+  "name": "@taubi19/react-sound",
+  "version": "1.3.0",
   "description": "React Sound component using soundmanager2",
   "main": "lib/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   ],
   "author": "Leonardo Andres Garcia Crespo <leoasis@gmail.com>",
   "license": "ISC",
-  "homepage": "https://github.com/leoasis/react-sound",
+  "homepage": "https://github.com/taubi19/react-sound",
   "dependencies": {
     "prop-types": "^15.5.7",
     "soundmanager2": "^2.97.20170602"
@@ -36,8 +36,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.14.0",
     "eslint-plugin-react": "^7.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
     "webpack": "^3.10.0",
